[gd_scene load_steps=3 format=3 uid="uid://c4vjquan70cis"]

[ext_resource type="FontFile" uid="uid://diiyvroyq1pc3" path="res://art/Lemon font/Lemon-Regular.ttf" id="1_a7xon"]
[ext_resource type="Script" path="res://scripts/hud.gd" id="1_sp60r"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_sp60r")

[node name="Score" type="Label" parent="."]
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -27.0
offset_right = 178.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_a7xon")
theme_override_font_sizes/font_size = 20
text = "[enemy_killed]"

[node name="startButton" type="Button" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.0
offset_top = -37.0
offset_right = 98.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_a7xon")
theme_override_font_sizes/font_size = 20
text = "start"

[node name="gameOver" type="Label" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -248.0
offset_top = 48.0
offset_right = 250.0
offset_bottom = 101.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_a7xon")
theme_override_font_sizes/font_size = 30
text = "OHH shit, you're dead"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitButton" type="Button" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -96.0
offset_right = 90.0
offset_bottom = 45.0
grow_horizontal = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_a7xon")
theme_override_font_sizes/font_size = 20
text = "leave the game"

[node name="RestartButton" type="Button" parent="."]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -96.0
offset_top = -160.0
offset_right = 94.0
offset_bottom = -101.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_a7xon")
theme_override_font_sizes/font_size = 20
text = "restart
"

[connection signal="pressed" from="startButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_restart_button_pressed"]
